<resources>
    <string name="app_name">Vacation Manager</string>
    <string name="app_title">휴가자 인증 시스템</string>
    <string name="activity_main_register_button">등록신청(병)</string>
    <string name="activity_main_milnum">군번</string>
    <string name="placeholder_birth">생년월일(YYMMDD)</string>
    <string name="activitiy_main_manager_view">허가(간부)</string>
    <string name="activitiy_main_user_view">목록 관리</string>
    <string name="activity_manager_view_accept">승인</string>
    <string name="activity_manager_view_reject">거부</string>
    <string name="activitiy_qr_title">QR 코드</string>
    <string name="popup_accept">확인</string>
    <string name="popup_notice">알림</string>
    <string name="placeholder_date">YYMMDD</string>
    <string name="placeholder_name">이름</string>
    <string name="placeholder_region">부대명</string>
    <string name="placeholder_level">계급</string>
    <string name="placeholder_manager_milnum">간부 군번</string>
    <string name="register_submit">등록</string>
    <string name="text_literal_from">부터</string>
    <string name="text_literal_to">까지</string>
    <string name="activity_user_view_remove">제거</string>
    <string name="activity_user_view_state">상태</string>
</resources>
